# KnowBase

./: .dockerignore  .env  .env.compose.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  README.md  docker-compose.yml  findings.md  progress.md  pyproject.toml  requirements.txt  task_plan.md
backend/: .coverage  .env.example  README.md  alembic.ini  openapi.json  pyproject.toml
backend/config/: settings.py
backend/migrations/: env.py
backend/scripts/: benchmark_kb_lazy_loading.py  export_openapi.py  import_sqlite_business_data.py  prepare_e2e_env.py  quickstart.py  run_e2e_worker.py  start_fake_redis.py
backend/src/: chat_utils.py  conversations.py  evaluate.py  graph.py  graph_nodes.py  graph_routing.py  graph_state.py  graph_utils.py  kb_models.py  knowledge_base.py  loaders.py  metrics.py  utils.py  web_search.py
backend/tests/: __init__.py  conftest.py  conversation_store.py  helpers.py  test_admin_audit_logs_routes.py  test_admin_users_routes.py  test_alembic_migrations.py  test_api_endpoints.py  test_api_routes_coverage.py  test_audit_store.py  test_auth_repository_sqlalchemy.py  test_auth_routes.py  test_auth_tokens.py  test_bookmark_rbac_routes.py  test_bookmark_repository_sqlalchemy.py  test_bookmark_store.py  test_chat_metrics_signature.py  test_chat_persistence.py  test_chat_rbac_routes.py  test_chat_route.py  test_chat_stream_service.py  test_chat_turn_persistence.py  test_chat_turn_postgres.py  test_chat_utils.py  test_conversation_migrations.py  test_conversation_rbac_routes.py  test_conversation_store.py  (+49 more)
(+354 files in other folders)
