[project]
name = "knowbase"
version = "0.1.0"
description = "LangChain + LangGraph knowledge base assistant — Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.0",
    "jieba>=0.42.1",
    "langchain>=1.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.0",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langsmith>=0.8.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rank-bm25>=0.2.0",
    "pypdf>=5.0.0",
    "python-docx>=1.0.0",
    "beautifulsoup4>=4.0.0",
    "markdownify>=0.11.0",
    "tavily>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.12",
    "pandas>=3.0.3",
    "coverage>=7.14.1",
]

[tool.uv]
package = false
